# bep-to-otel

./: .gitmodules  LICENSE  MODULE.bazel  README.md  go.mod  go.sum
cmd/bes/: BUILD  main.go
internal/: BUILD.bazel
proto/: BUILD.bazel  build_event_stream.proto  command_line.proto  invocation_policy.proto  option_filters.proto
tools/gazelle/: BUILD
