load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "blaze_proto",
    srcs = ["action_cache.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":blaze_proto",
        ":failure_details_proto",
        ":metrics_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "command_line_proto",
    srcs = ["command_line.proto"],
    visibility = ["//visibility:public"],
    deps = [":options_proto"],
)

proto_library(
    name = "failure_details_proto",
    srcs = ["failure_details.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "metrics_proto",
    srcs = ["package_load_metrics.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

proto_library(
    name = "options_proto",
    srcs = ["option_filters.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":blaze_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":blaze_go_proto",
        ":command_line_go_proto",
        ":failure_details_go_proto",
        ":invocation_policy_go_proto",
        ":metrics_go_proto",
    ],
)

go_proto_library(
    name = "command_line_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":command_line_proto",
    visibility = ["//visibility:public"],
    deps = [":options_go_proto"],
)

go_proto_library(
    name = "failure_details_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":failure_details_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "invocation_policy_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":invocation_policy_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "metrics_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":metrics_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "github.com/geethree/bep-to-otel/proto",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "proto_proto",
    srcs = [
        "command_line.proto",
        "invocation_policy.proto",
        "option_filters.proto",
    ],
    visibility = ["//visibility:public"],
)
